--- a/translateShaderPacks/translateShaderPacks.csproj
+++ b/translateShaderPacks/translateShaderPacks.csproj
@@ -7,6 +7,7 @@
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
         <ApplicationIcon>Assets\avalonia-logo.ico</ApplicationIcon>
         <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+        <PublishAot>true</PublishAot>
     </PropertyGroup>
 
     <ItemGroup>
