perf(build): 优化项目发布配置以减小应用体积
- 启用 AOT 发布以提高运行性能
- 设置优化偏好为体积优先
- 禁用堆栈跟踪支持以减少二进制大小
- 启用不变全球化以提升启动速度
- 禁用事件源支持以节省资源
- 启用系统资源键以优化内存使用
- 禁用 JSON 序列化反射以提升安全性

--- a/translateShaderPacks/translateShaderPacks.csproj
+++ b/translateShaderPacks/translateShaderPacks.csproj
@@ -7,7 +7,15 @@
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
         <ApplicationIcon>Assets\avalonia-logo.ico</ApplicationIcon>
         <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+        
         <PublishAot>true</PublishAot>
+        
+        <OptimizationPreference>Size</OptimizationPreference>
+        <StackTraceSupport>false</StackTraceSupport>
+        <InvariantGlobalization>true</InvariantGlobalization>
+        <EventSourceSupport>false</EventSourceSupport>
+        <UseSystemResourceKeys>true</UseSystemResourceKeys>
+        <JsonSerializerIsReflectionEnabledByDefault>false</JsonSerializerIsReflectionEnabledByDefault>
     </PropertyGroup>
 
     <ItemGroup>
